# eav

./: .clang-format  .gitignore  CMakeLists.txt  design.md  main  main.cpp  program  readme.md
.github/workflows/: ci.yml
Concepts/: Concepts.hpp
Error/: Error.hpp  ErrorConcept.hpp  TryOrConvert.hpp
Option/: CoproductOperations.hpp  Option.hpp  Option.tpp
Result/: Result.hpp  Result.tpp
SmartPtr/SharedPtr/: SharedPtr.tpp
SmartPtr/UniquePtr/: GeneralUniquePtr.tpp  UniquePtr.hpp
eav/: Option.hpp  Result.hpp  design.md
eav/Concepts/: IsResult.hpp  PipeableWith.hpp
eav/Detail/: Pending.hpp
eav/Option/: Make.hpp
eav/Option/Combinators/: AndThen.hpp  Filter.hpp  Map.hpp  OrElse.hpp
eav/Option/Detail/: OptionImpl.hpp  Tags.hpp
eav/Option/FwdDecl/: None.hpp  Option.hpp  Some.hpp
eav/Result/: Make.hpp  Pipe.hpp
eav/Result/Combinators/: AndThen.hpp  Filter.hpp  MapErr.hpp  MapOk.hpp  OrElse.hpp
eav/Result/Concepts/: IsError.hpp  IsResult.hpp  PipeableWith.hpp
eav/Result/Detail/: Pending.hpp  ResultImpl.hpp  Tags.hpp
eav/Result/FwdDecl/: Err.hpp  Ok.hpp  Result.hpp
examples/: CacheWithOption.cpp  ChoosingMetricWithEither.cpp  JSONParsingWithResult.cpp  LocalizationWithEither.cpp  UserValidation.cpp
include/Either/: Either.hpp
include/Error/: Error.hpp  ErrorConcept.hpp  TryOrConvert.hpp
include/Option/: CoproductOperations.hpp  Option.hpp
include/Result/: Result.hpp
include/SmartPtr/: SharedPtr.hpp  UniquePtr.hpp  WeakPtr.hpp
include/UsedConcepts/: Concepts.hpp
src/Either/: Either.tpp  Either<L>.hpp  Either<R>.hpp  Specializations.hpp
src/Error/: Error.tpp
src/Option/: CoproductOperations.hpp  Option.tpp
src/Result/: Make.hpp  Pipe.hpp  Result.hpp  Result.tpp
src/Result/Combinators/: AndThen.hpp  Map.hpp  MapOk.hpp  OrElse.hpp
src/Result/Concepts/: IsError.hpp
src/Result/Impl/: Result.hpp
src/SmartPtr/SharedPtr/: ArraySharedPtr.hpp  ArraySharedPtr.tpp  ControlBlock.tpp  SharedPtr.tpp
src/SmartPtr/UniquePtr/: ArrayUniquePtr.hpp  ArrayUniquePtr.tpp  UniquePtr.tpp
src/SmartPtr/WeakPtr/: ArrayWeakPtr.hpp  ArrayWeakPtr.tpp  WeakPtr.tpp
test/: CMakeLists.txt  Utils.cpp  Utils.hpp
test/Either/: GeneralTestEither.cpp  SpecializationsTest.cpp
test/Error/: CMakeLists.txt  ErrorTest.cpp  GeneralTestError.cpp  TryOrConvertTest.cpp
test/Option/: ArithmeticTestOption.cpp  CMakeLists.txt  Func.cpp  GeneralTestOption.cpp  Unit.cpp
test/Result/: CMakeLists.txt  Func.cpp  GeneralTestResult.cpp  TestUtils.hpp  Unit.cpp
test/SharedPtr/: GeneralTestSharedPtr.cpp  TestArraySharedPtr.cpp
test/UniquePtr/: GeneralTestUniquePtr.cpp  TestArrayUniquePtr.cpp  TestSpecializedUniquePtr.cpp
test/WeakPtr/: GeneralTestWeakPtr.cpp  TestArrayWeakPtr.cpp
